Apply patch from PR/48310 - kue(4) cannot receive multicast packets.